# Iris

./: .gitignore  AUDIT.md  CLAUDE.md  DESIGN_DECISIONS.md  GROUND_TRUTH_APIS.md  Iris.entitlements  Package.swift  README.md  iris_crash_details  uninstall_systemextensions.sh
IrisApp/: CLICommandHandler.swift  Info.plist  IrisApp.swift  IrisSocketServer.swift  RustBatchOps.swift  RustDNSParser.swift  RustMachOParser.swift
IrisDNSExtension/: DESIGN.md  DNSExtensionXPCService.swift  DNSProxyProvider+FlowHandlers.swift  DNSProxyProvider+Parsing.swift  DNSProxyProvider.swift  ExtensionDoHClient.swift  IrisDNSExtension.entitlements  main.swift
IrisEndpointExtension/: DESIGN.md  ESClient+AuthExec.swift  ESClient+FileEvents.swift  ESClient+Helpers.swift  ESClient+Muting.swift  ESClient+NationStateEvents.swift  ESClient+ProcessLifecycle.swift  ESClient+ProcessParsing.swift  ESClient+RingBuffer.swift  ESClient+SecurityEvents.swift  ESClient+Seeding.swift  ESClient.swift  ESProcessInfo.swift  ESXPCService.swift  ExecPolicy.swift  Info.plist  IrisEndpointExtension.entitlements  MuteSet.swift  main.swift
IrisNetworkExtension/: DESIGN.md  FilterDataProvider+Capture.swift  FilterDataProvider+FlowHandling.swift  FilterDataProvider+HTTP.swift  FilterDataProvider+Helpers.swift  FilterDataProvider+ProcessInfo.swift  FilterDataProvider+Rules.swift  FilterDataProvider.swift  HTTPParser+RequestParsing.swift  (+12 more)
rust/iris-parsers/: Cargo.toml
rust/iris-parsers/include/: iris_parsers.h
rust/iris-parsers/src/: batch.rs  der.rs  dns.rs  ffi.rs  http.rs  lib.rs  macho.rs  tlsh.rs
(+106 files in other folders)
