[package]
name = "iris-parsers"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
httparse = "1.8"
goblin = { version = "0.10", default-features = false, features = ["std", "mach32", "mach64"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
